# ComplianceAI

./: .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  GITHUB_SETUP.md  LICENSE  README.md  app.py  compliance_checker.py  compliance_frameworks.py  document_processor.py  pii_detector.py  pyproject.toml  report_generator.py  setup.py  utils.py
